# org-toda

./: .gitignore  Justfile  fetch.py  org_toda.py  pyproject.toml  requirements.txt  toda.py
org_toda/: __init__.py  __main__.py  common.py  fetch.py  from_org.py  to_org.py
