[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "org_toda"
authors = [{name = "Ma'or Kadosh", email = "git@avocadosh.xyz"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = ["caldav >= 0.8.2", "icalendar >= 4.0.9"]

[project.urls]
Home = "https://github.com/it-is-wednesday/org-toda"
